[package]
name = "nito_shim"
version = "0.1.0"
edition = "2021"

[lib]
name = "nito_shim"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Crypto dependencies (compatible versions)
# Note: We'll add solana-sdk later when we need full transaction support
# For Phase 1, we only need basic crypto operations
ed25519-dalek = { version = "1.0", features = ["std", "rand_core"] }
sha2 = "0.10"
borsh = "1.5"

[build-dependencies]
cbindgen = "0.26"

